reconfig openApiDoc
